add sorting cabins feature

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <div id="backdrop-overlay"></div>
-    <div id="modal-form"></div>
+    <div id="modal"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
